--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   rename: ^1.3.1
   qr_flutter: ^4.0.0
   qr_code_scanner: ^0.5.2
+  infinite_scroll_pagination: ^3.1.0
 
 dev_dependencies:
   flutter_test:
